// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi and four answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          Who painted The Starry Night?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="grid"
            >
              <button
                class="item"
                id="0_Vincent van Gogh"
                type="button"
              >
                <div />
                Vincent van Gogh
              </button>
              <button
                class="item"
                id="1_Pablo Picasso"
                type="button"
              >
                <div />
                Pablo Picasso
              </button>
              <button
                class="item"
                id="2_Leonardo da Vinci"
                type="button"
              >
                <div />
                Leonardo da Vinci
              </button>
              <button
                class="item"
                id="3_Claude Monet"
                type="button"
              >
                <div />
                Claude Monet
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi and six answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          Who painted The Starry Night?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="grid"
            >
              <button
                class="item"
                id="0_Vincent van Gogh"
                type="button"
              >
                <div />
                Vincent van Gogh
              </button>
              <button
                class="item"
                id="1_Pablo Picasso"
                type="button"
              >
                <div />
                Pablo Picasso
              </button>
              <button
                class="item"
                id="2_Leonardo da Vinci"
                type="button"
              >
                <div />
                Leonardo da Vinci
              </button>
              <button
                class="item"
                id="3_Claude Monet"
                type="button"
              >
                <div />
                Claude Monet
              </button>
              <button
                class="item"
                id="4_Michelangelo"
                type="button"
              >
                <div />
                Michelangelo
              </button>
              <button
                class="item"
                id="5_Rembrandt"
                type="button"
              >
                <div />
                Rembrandt
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi and two answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          Who painted The Starry Night?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="grid"
            >
              <button
                class="item"
                id="0_Vincent van Gogh"
                type="button"
              >
                <div />
                Vincent van Gogh
              </button>
              <button
                class="item"
                id="1_Pablo Picasso"
                type="button"
              >
                <div />
                Pablo Picasso
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type slider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          What percentage of the earth's surface is covered by water?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="interactive"
            >
              <form>
                <input
                  id="slider-range"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="0"
                />
                <div
                  class="inputGroup"
                >
                  <div
                    class="main"
                  >
                    <input
                      data-testid="test-slider-input-textfield"
                      id="slider-input"
                      max="100"
                      min="0"
                      name="slider-input"
                      type="number"
                      value="0"
                    />
                  </div>
                  <div
                    class="main"
                  >
                    <button
                      class="primary"
                      data-testid="test-submit-button-button"
                      id="submit-button"
                      name="submit-button"
                      type="submit"
                    >
                      <span>
                        Submit
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type true false 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          Rabbits can't vomit?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="grid"
            >
              <button
                class="item"
                id="0_True"
                type="button"
              >
                <div />
                True
              </button>
              <button
                class="item"
                id="1_False"
                type="button"
              >
                <div />
                False
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type type answer 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="question"
        >
          Who painted the Mono Lisa?
        </div>
        <div
          class="timer"
        >
          <span
            style="width: 66.66666666666666%;"
          />
        </div>
        <div
          class="main"
        >
          <div
            class="main"
          >
            <div
              class="interactive"
            >
              <form>
                <div
                  class="main"
                >
                  <input
                    data-testid="test-answer-input-textfield"
                    id="answer-input"
                    name="answer-input"
                    placeholder="Answer"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="main"
                >
                  <button
                    class="primary"
                    data-testid="test-submit-button-button"
                    id="submit-button"
                    name="submit-button"
                    type="submit"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3l58.3 0c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24l0-13.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1l-58.3 0c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
